# cfn-ci-helper

./: .coveragerc  .gitignore  README.md  deploy_cf.py  main.py  pyproject.toml  requirements.txt  run_tests.py  setup.cfg
.github/workflows/: docs-publish.yml  python-publish-combo.yml  python-publish-stag.yml  python-publish.yml
cfnStack/: stack.py
docs/: code.rst  conf.py  index.rst
docs/_static/: keep.txt
utest/: __init__.py  action_parsing_tests.py  basic_tests.py  example_stack.yaml  example_stack_params-moto.json  example_stack_params.yaml
utest/utest_stack/: config.yaml  example_stack_ssm.yaml
