[project]
name = "cfn-ci-helper"
version = "2025.10.16-2"
authors = [
    {name = "Chris Halbersma", email = "chris@halbersma.us" }
]
description = "A Cloudformation CI Helper System"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "boto3>=1.40.52",
    "cfn-lint>=1.40.2",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "texttable>=1.7.0",
]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/chalbersma/cfn-ci-helper"

[options]
packages = "cfnStack"
include_package_data = true
scripts = "deploy_cf.py"
install_requires = [
    "jinja2>=3.0.2",
    "texttable"
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "moto[all]>=5.1.14",
]
docs = [
    "sphinx>=7.4.7",
    "sphinxcontrib-plantuml>=0.30",
    "myst-parser[linkify]>=2.0.0",
    "furo>=2024.1.29",
    "sphinx-argparse>=0.3.2",
    "coverage"
]

[tool.setuptools]
packages = ["cfnStack"]

[project.scripts]
"deploy_cf.py" = "deploy_cf:main"
